--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,14 @@
-body {
+.fill-window-space, body {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  margin: 0;
+}
+
+body {
   background-color: #f9f9f9;
+  margin: 0;
 }
 
 .text-center {
